# StreamDiffusion-installer

./: README.md  pyproject.toml
sd_installer/: __init__.py  __main__.py  cli.py  installer.py  tensorrt.py  verifier.py
